# axum_wordle

./: README.md
backend/: .env  .env.production  .gitignore  Cargo.toml  devdb.sqlite
backend/entity/: Cargo.toml
backend/entity/src/entities/: game.rs  mod.rs  prelude.rs  user.rs
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20250430_212703_user.rs  m20250504_175224_game.rs
backend/src/: main.rs
backend/src/controllers/: game.rs  mod.rs  user.rs
backend/src/util/: mod.rs  password.rs  wrdl_serde.rs
frontend/wordle-app/: package-lock.json  package.json  vite.config.ts
frontend/wordle-app/app/: app.css  root.tsx  routes.ts
frontend/wordle-app/app/routes/: login.tsx  navbar.tsx  userhome.tsx  wordle-game.tsx
frontend/wordle-app/app/usergamelist/: usergamelist.tsx
frontend/wordle-app/app/usersidebar/: usersidebar.tsx
frontend/wordle-app/app/userstats/: userstats.tsx
frontend/wordle-app/app/wordle-anim/: wordle-anim.tsx
