[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
axum = { version = "0.8.4", features = ["macros"] }
dotenvy = "0.15.7"
sea-orm = { version = "1.1.10", features = ["sqlx-sqlite", "sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
argon2 = "0.5.3"
tower-http = { version = "0.6.2", features = ["cors"] }
